# Image-processing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  hct.cpp  image-resize.cpp  image-size.cpp  image_processing.cpp  image_processing.hpp  main.cpp  open-image.cpp  open-video.cpp  open-webcam.cpp  sierpinski.cpp
